--- a/exercice7.html
+++ b/exercice7.html
@@ -6,6 +6,25 @@
     <title>EX7</title>
 </head>
 <body>
+    <div class="line1">
+        <div class="green">green</div>
+        <div class="blue">blue</div>
+      </div>
+
+      <div class="line2">
+        <div class="brique">green</div>
+        <div class="orange">orange</div>
+        <div class="grey">grey</div>
+     
+        <div class="yellow">green</div>
+        <div class="turquoise">orange</div>
+        <div class="terra">grey</div>
+    </div>
+
+    <div class="line4">
+        <div class="grey2">green</div>
+    </div>
+
     
 </body>
 </html>
